# luminara

./: .dockerignore  .env.example  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Client.py  Dockerfile  LICENSE  Luminara.py  README.md  Racu.py  SECURITY.md  client.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  loader.py  lumi.py  main.py  nginx-template.html  pyproject.toml  racu_update.sh  requirements.txt  settings.yaml  users.yml.example
.github/workflows/: docker-hub-image.yml  docker-image.yml  docker-publish.yml
config/: birthday.json  default_items.json  economy.json  json_loader.py  levels.en-US.json  parser.py  reactions.json  strings.en-US.json
config/JSON/: art.json  birthday.json  levels.json  reactions.json  resources.json  strings.json
dashboard/: Dockerfile  README.md  angular.json  package-lock.json  package.json
data/: Birthday.py  BlackJackStats.py  Currency.py  Dailies.py  Inventory.py  Item.py  ShopItem.py  SlotsStats.py  Xp.py
database/: database.py  dev.db-journal  schema.prisma
database/controllers/: guild_config.py
db/: database.py  tables.py
db/init/: 1-tables.sql  2-items.sql  v2-update.sql
db/migrations/: v2_5_8_init.sql  v2_5_9_reactions.sql  v2_6_0_cases.sql  v2_6_0_mod.sql  v3_3_0_feeds.sql  v3_4_0_cockfight.sql
handlers/: ErrorHandler.py  ItemHandler.py  LoggingHandler.py  ReactionHandler.py  XPHandler.py  error.py  error_handler.py  event.py  event_handler.py  reaction_handler.py  trigger.py  xp.py  xp_handler.py
json/: economy.json  strings.en-US.json
lib/: actionable.py  case_handler.py  checks.py  client.py  const.py  constants.py  economy_embeds.py  economy_functions.py  embed_builder.py  embeds.py  embeds_old.py  err_embeds.py  exceptions.py  format.py  formatter.py  help.py  interaction.py  loader.py  metadata.py  reactions.py  resources.py  time.py
lib/embeds/: boost.py  error.py  greet.py  info.py  intro.py  moderation.py  triggers.py
lib/exceptions/: LumiExceptions.py  RacuExceptions.py
lib/interactions/: introduction.py
locales/: bdays.en-US.json  levels.en-US.json  strings.en-US.json
localization/: levels.en-US.json  strings.en-US.json
modules/: InventoryCog.py  admin.py  award.py  backup.py  balance.py  basic.py  birthday.py  blackjack.py  config.py  currency-award.py  currency-exchange.py  daily.py  duel.py  economy.py  exchange.py  gambling.py  give.py  guildconfig.py  introduction.py  inventory.py  item.py  leaderboard.py  leaderboard_v2.py  level.py  leveling.py  logging.py  logging.py.DISABLED  miscellaneous.py  moderation.py  owneronly.py  ping.py  say.py  sell.py  shop.py  simple_mod.py  slots.py  sql-commands.py  stats.py  uptime.py
modules/admin/: __init__.py  admin.py  award.py  blacklist.py  dev.py  sql.py  sync.py
modules/birthdays/: __init__.py  birthday.py  daily_check.py  upcoming.py
modules/cockfights/: rooster.py
modules/config/: __init__.py  c_birthday.py  c_boost.py  c_greet.py  c_level.py  c_moderation.py  c_prefix.py  c_show.py  config.py  set_prefix.py  show.py  xp_reward.py
modules/economy/: __init__.py  balance.py  blackjack.py  coinflip.py  daily.py  give.py  inventory.py  leaderboard.py  sell.py  slots.py  stats.py
modules/feeds/: feeds.py
modules/help/: __init__.py
modules/levels/: __init__.py  leaderboard.py  level.py
modules/misc/: __init__.py  avatar.py  backup.py  info.py  inspirobot.py  inspirotbot.py  introduction.py  invite.py  ping.py  uptime.py  xkcd.py
sb_tools/: economy_embeds.py  economy_functions.py  embeds.py  interaction.py  level_messages.py  reactions.py  resources.py  universal.py  xp_functions.py
services/: Birthday.py  BlackJackStats.py  Client.py  Currency.py  Dailies.py  GuildConfig.py  Help.py  Inventory.py  Item.py  ShopItem.py  SlotsStats.py  Xp.py  birthday_service.py  blacklist_service.py  case_service.py  config_service.py  currency_service.py  daily_service.py  feed_service.py  help_service.py  inventory_service.py  item_service.py  level_reward.py  logging_service.py  modlog_service.py  reactions_service.py  rooster_service.py  stats_service.py  xkcd_service.py  xp_service.py
settings/: settings.yaml
ui/: boosts.py  cases.py  config.py  embeds.py
utils/: embeds.py  resources.py  time.py
wrappers/: inspirobot.py  openai.py  twitch.py  xkcd.py
(+51 files in other folders)
